--- a/.github/workflows/niffler-frontend-staging.yaml
+++ b/.github/workflows/niffler-frontend-staging.yaml
@@ -57,10 +57,10 @@ jobs:
           pwd
           docker login --username ${{ vars.DOCKER_HUB_ACC }} --password "${{ secrets.DOCKER_HUB_PASSWORD }}"
           echo "### niffler-front version will be used: ${{ env.PREFIX }}/${{ env.FRONT_IMAGE }}-${{ env.PROFILE }}:${{ env.FRONT_VER}}"
-          echo "### PREFIX will be used: ${{ env.PREFIX }}"
-          echo "### PROFILE will be used: ${{ env.PROFILE }}"
           bash ./docker-build.sh staging push
       - name: deploy
         run: |
+          docker-compose -f docker-compose.ci.yml pull frontend.niffler.dc
+          docker-compose -f docker-compose.ci.yml stop frontend.niffler.dc && docker-compose -f docker-compose.ci.yml up -d --no-deps frontend.niffler.dc
           docker system prune  -a -f
-          echo "done WITHOUT DOCKER_COMPOSE!"
+          echo "Done!"
