--- a/niffler-gateway/src/main/resources/application.yaml
+++ b/niffler-gateway/src/main/resources/application.yaml
@@ -14,6 +14,7 @@ logging:
     org.springframework.web: DEBUG
     org.springframework.security: DEBUG
     org.springframework.security.oauth2: DEBUG
+    net.devh.boot.grpc: DEBUG
 #    org.springframework.boot.autoconfigure: DEBUG
 
 ---
