--- a/.github/workflows/niffler-auth-staging.yaml
+++ b/.github/workflows/niffler-auth-staging.yaml
@@ -1,8 +1,8 @@
 name: auth_deploy_stage
 on:
   push:
-    branches:
-      - prod_configs
+    branches-ignore:
+      - master
     paths:
       - 'niffler-auth/**'
 
