--- a/.github/workflows/niffler-gateway-staging.yaml
+++ b/.github/workflows/niffler-gateway-staging.yaml
@@ -1,8 +1,8 @@
 name: gateway_deploy_stage
 on:
   push:
-    branches:
-      - prod_configs
+    branches-ignore:
+      - master
     paths:
       - 'niffler-gateway/**'
 
