--- a/.github/workflows/niffler-spend-staging.yaml
+++ b/.github/workflows/niffler-spend-staging.yaml
@@ -1,8 +1,8 @@
 name: spend_deploy_stage
 on:
   push:
-    branches:
-      - prod_configs
+    branches-ignore:
+      - master
     paths:
       - 'niffler-spend/**'
 
