--- a/.github/workflows/niffler-userdata-staging.yaml
+++ b/.github/workflows/niffler-userdata-staging.yaml
@@ -1,8 +1,8 @@
 name: userdata_deploy_stage
 on:
   push:
-    branches:
-      - prod_configs
+    branches-ignore:
+      - master
     paths:
       - 'niffler-userdata/**'
 
