--- a/.github/workflows/niffler-auth-prod.yaml
+++ b/.github/workflows/niffler-auth-prod.yaml
@@ -63,7 +63,8 @@ jobs:
           echo "### niffler-userdata version will be used: ${{ env.USERDATA_VER }}"
           echo "### niffler-front version will be used: ${{ env.PREFIX }}/${{ env.FRONT_IMAGE }}-${{ env.PROFILE }}:${{ env.FRONT_VER}}"
           bash ./gradlew :niffler-auth:jib -Pskipjaxb -x :niffler-e-2-e-tests:test
-          docker-compose -f docker-compose.ci.yml pull auth.niffler.dc
-          docker-compose -f docker-compose.ci.yml stop auth.niffler.dc && docker-compose -f docker-compose.ci.yml up -d --no-deps auth.niffler.dc
+          docker-compose -f docker-compose.ci.yml down
+          docker-compose -f docker-compose.ci.yml pull
+          docker-compose -f docker-compose.ci.yml up -d
           docker system prune  -a -f
-          echo "Done!"
+          echo "Done re-create ENV!"
