--- a/.github/workflows/niffler-frontend-prod.yaml
+++ b/.github/workflows/niffler-frontend-prod.yaml
@@ -56,11 +56,11 @@ jobs:
         run: |
           pwd
           docker login --username ${{ vars.DOCKER_HUB_ACC }} --password "${{ secrets.DOCKER_HUB_PASSWORD }}"
-          echo "### niffler-front version will be used: ${{ env.PREFIX }}/${{ env.FRONT_IMAGE }}-${{ env.PROFILE }}:${{ env.FRONT_VER}}"
+          echo "### niffler-front version will be used: ${{ env.PREFIX }}/${{ env.FRONT_IMAGE }}-${{ env.PROFILE }}:${{ env.FRONT_VER }}"
           bash ./docker-build.sh prod push
       - name: deploy
         run: |
-          docker-compose -f docker-compose.ci.yml pull frontend.niffler.dc
-          docker-compose -f docker-compose.ci.yml stop frontend.niffler.dc && docker-compose -f docker-compose.ci.yml up -d --no-deps frontend.niffler.dc
+          docker-compose -f docker-compose.ci.yml down
+          docker-compose -f docker-compose.ci.yml up -d
           docker system prune  -a -f
           echo "Done!"
