--- a/.github/workflows/niffler-frontend-prod.yaml
+++ b/.github/workflows/niffler-frontend-prod.yaml
@@ -60,7 +60,7 @@ jobs:
           bash ./docker-build.sh prod push
       - name: deploy
         run: |
-          docker-compose -f docker-compose.ci.yml down
-          docker-compose -f docker-compose.ci.yml up -d
+          docker-compose -f docker-compose.ci.yml pull frontend.niffler.dc
+          docker-compose -f docker-compose.ci.yml stop frontend.niffler.dc && docker-compose -f docker-compose.ci.yml up -d --no-deps frontend.niffler.dc
           docker system prune  -a -f
           echo "Done!"
