--- a/niffler-currency/src/main/resources/application.yaml
+++ b/niffler-currency/src/main/resources/application.yaml
@@ -19,9 +19,15 @@ spring:
       idle-timeout: 10000
       max-lifetime: 1000
       auto-commit: true
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+    baseline-version: 0
+    schemas: public
+    locations: classpath:db/migration/niffler-currency
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
     properties:
       hibernate:
         jdbc:
@@ -31,9 +37,6 @@ spring:
     show-sql: false
     generate-ddl: true
     open-in-view: false
-  sql:
-    init:
-      mode: always
 
 logging:
   level:
