--- a/niffler-spend/src/main/resources/application.yaml
+++ b/niffler-spend/src/main/resources/application.yaml
@@ -15,9 +15,15 @@ spring:
       idle-timeout: 10000
       max-lifetime: 1000
       auto-commit: true
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
+    baseline-version: 0
+    schemas: public
+    locations: classpath:db/migration/niffler-spend
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
     properties:
       hibernate:
         jdbc:
@@ -27,9 +33,6 @@ spring:
     show-sql: false
     generate-ddl: true
     open-in-view: false
-  sql:
-    init:
-      mode: always
 
 logging:
   level:
@@ -101,7 +104,6 @@ spring:
       scheme: https
       uri: https://vault.qa.guru:443
       token: ${VAULT_TOKEN}
-
   datasource:
     url: ${db.url}
     username: ${db.username}
@@ -130,7 +132,6 @@ spring:
       scheme: https
       uri: https://vault.qa.guru:443
       token: ${VAULT_TOKEN}
-
   datasource:
     url: ${db.url}
     username: ${db.username}
