--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,4 @@ include 'niffler-e-2-e-tests-rustam-lesson_1'
 include 'niffler-e-2-e-tests-rustam-lesson_2'
 include 'niffler-e-2-e-tests-rustam-lesson_3'
 include 'niffler-e-2-e-tests-rustam-lesson_4'
+include 'niffler-e-2-e-tests-rustam-lesson_5'
