--- a/niffler-e-2-e-tests-rustam-lesson_5/build.gradle
+++ b/niffler-e-2-e-tests-rustam-lesson_5/build.gradle
@@ -97,13 +97,14 @@ dependencies {
     testImplementation 'com.squareup.okhttp3:logging-interceptor:3.14.9'
     testImplementation 'io.rest-assured:rest-assured:3.3.0'
     testImplementation 'org.assertj:assertj-core:3.24.2'
-    implementation 'com.github.javafaker:javafaker:1.0.2'
     // DB
     testImplementation "org.springframework.security:spring-security-crypto:${springComponentsVersion}"
     testImplementation "org.springframework:spring-jdbc:${springComponentsVersion}"
     testImplementation 'org.postgresql:postgresql:42.5.3'
     testImplementation 'p6spy:p6spy:3.9.1'
-    testImplementation 'org.hibernate:hibernate-core:6.1.7.Final'
+    testImplementation ('org.hibernate:hibernate-core:6.1.7.Final') {
+        exclude group: "net.bytebuddy:byte-buddy"
+    }
     testImplementation 'com.github.vertical-blank:sql-formatter:2.0.3'
     implementation 'commons-io:commons-io:2.11.0'
     // Allure
@@ -123,7 +124,9 @@ dependencies {
     testImplementation "com.codeborne:selenide:${selenideVersion}"
     // Utils
     testImplementation 'commons-io:commons-io:2.11.0'
-    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation ('com.github.javafaker:javafaker:1.0.2') {
+        exclude group: "org.apache.commons:commons-lang"
+    }
     testImplementation 'com.google.code.findbugs:jsr305:3.0.2'
     // gRPC
     testImplementation "io.grpc:grpc-protobuf:${grpcVersion}"
