--- a/settings.gradle
+++ b/settings.gradle
@@ -12,3 +12,4 @@ include 'niffler-e-2-e-tests-rustam-lesson_3'
 include 'niffler-e-2-e-tests-rustam-lesson_4'
 include 'niffler-e-2-e-tests-rustam-lesson_5'
 include 'niffler-e-2-e-tests-rustam-lesson_6'
+include 'niffler-e-2-e-tests-rustam-lesson_7'
