--- a/niffler-e-2-e-tests-rustam-lesson_7/build.gradle
+++ b/niffler-e-2-e-tests-rustam-lesson_7/build.gradle
@@ -1,11 +1,12 @@
 buildscript {
     ext {
-        protobufVersion = '3.21.12'
-        grpcVersion = '1.52.1'
-        allureVersion = '2.21.0'
-        selenideVersion = '6.17.0'
-        retrofitVersion = '2.9.0'
-        springComponentsVersion = '6.0.3'
+        protobufVersion = '3.24.3'
+        grpcVersion = '1.58.0'
+        allureVersion = '2.24.0'
+        selenideVersion = '6.18.0'
+        userdataWsdlUrl = System.getProperty("test.env") == "docker"
+                ? "http://userdata.niffler.dc:8089/ws/userdata.wsdl"
+                : "http://127.0.0.1:8089/ws/userdata.wsdl"
     }
 }
 
@@ -15,23 +16,13 @@ plugins {
     id 'io.qameta.allure-adapter' version '2.11.2'
 }
 
-group 'guru.qa'
-version '0.0.4-SNAPSHOT'
-
-repositories {
-    mavenCentral()
-}
-
-compileJava.options.encoding = 'UTF-8'
-
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
-}
+group = 'guru.qa'
+version = '1.0.0'
 
 allure {
     version.set("${allureVersion}")
     adapter {
-        aspectjVersion.set('1.9.19')
+        aspectjVersion.set("1.9.19")
         autoconfigure.set(true)
         aspectjWeaver.set(true)
     }
@@ -44,7 +35,7 @@ configurations {
 tasks.register('genJaxb') {
     ext.sourcesDir = "${buildDir}/generated-sources/jaxb"
     ext.classesDir = "${buildDir}/classes/jaxb"
-    ext.schema = "userdata.wsdl"
+    ext.schema = "${userdataWsdlUrl}"
 
     outputs.dir classesDir
 
@@ -55,8 +46,7 @@ tasks.register('genJaxb') {
             mkdir(dir: sourcesDir)
             mkdir(dir: classesDir)
 
-            xjc(destdir: sourcesDir, schema: schema,
-                    package: "guru.qa.niffler.userdata.wsdl") {
+            xjc(destdir: sourcesDir, schema: schema, package: "guru.qa.niffler.userdata.wsdl") {
                 arg(value: "-wsdl")
                 produces(dir: sourcesDir, includes: "**/*.java")
             }
@@ -78,55 +68,51 @@ tasks.register('genJaxb') {
     }
 }
 
+genJaxb.onlyIf {
+    !project.hasProperty("skipjaxb")
+}
+
 sourceSets {
-    test {
+    main {
         java {
-            srcDir 'src/test/java'
+            srcDir 'src/main/java'
             srcDir 'build/generated-sources/jaxb'
         }
     }
 }
 
-
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
-
+    // Logs
+    testImplementation 'ch.qos.logback:logback-classic:1.4.11'
+    testImplementation 'org.slf4j:slf4j-api:2.0.9'
+    // JUnit
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
     // REST
-    testImplementation "com.squareup.retrofit2:retrofit:${retrofitVersion}"
-    testImplementation "com.squareup.retrofit2:converter-jackson:${retrofitVersion}"
+    testImplementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    testImplementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
     testImplementation 'com.squareup.okhttp3:logging-interceptor:3.14.9'
-    testImplementation 'io.rest-assured:rest-assured:3.3.0'
-    testImplementation 'org.assertj:assertj-core:3.24.2'
     // DB
-    testImplementation "org.springframework.security:spring-security-crypto:${springComponentsVersion}"
-    testImplementation "org.springframework:spring-jdbc:${springComponentsVersion}"
+    testImplementation 'org.springframework:spring-jdbc:6.0.11'
     testImplementation 'org.postgresql:postgresql:42.5.3'
     testImplementation 'p6spy:p6spy:3.9.1'
-    testImplementation ('org.hibernate:hibernate-core:6.1.7.Final') {
-        exclude group: "net.bytebuddy:byte-buddy"
-    }
+    testImplementation 'org.hibernate:hibernate-core:6.3.0.Final'
     testImplementation 'com.github.vertical-blank:sql-formatter:2.0.3'
-    implementation 'commons-io:commons-io:2.11.0'
+    testImplementation 'org.springframework.security:spring-security-crypto:6.1.0'
     // Allure
     testImplementation "io.qameta.allure:allure-attachments:${allureVersion}"
     testImplementation("io.qameta.allure:allure-junit5:${allureVersion}") {
-        exclude group: "org.junit.jupiter-api"
-        exclude group: "org.junit.platform"
         exclude group: "org.junit.jupiter"
     }
     testImplementation("io.qameta.allure:allure-selenide:${allureVersion}") {
         exclude group: 'com.codeborne'
     }
     testImplementation "io.qameta.allure:allure-okhttp3:${allureVersion}"
-    testImplementation "io.qameta.allure:allure-selenide:${allureVersion}"
     testImplementation "io.qameta.allure:allure-grpc:${allureVersion}"
     // WEB
     testImplementation "com.codeborne:selenide:${selenideVersion}"
     // Utils
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation 'commons-io:commons-io:2.11.0'
-    testImplementation ('com.github.javafaker:javafaker:1.0.2') {
-        exclude group: "org.apache.commons:commons-lang"
-    }
     testImplementation 'com.google.code.findbugs:jsr305:3.0.2'
     // gRPC
     testImplementation "io.grpc:grpc-protobuf:${grpcVersion}"
@@ -138,16 +124,23 @@ dependencies {
     // SOAP
     testImplementation 'com.sun.xml.messaging.saaj:saaj-impl:3.0.1'
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
-    // Wiremock
-    testImplementation 'com.github.tomakehurst:wiremock-jre8:2.35.0'
-    testImplementation 'com.github.tomakehurst:wiremock-standalone:2.27.2'
-    // SOAP
-    testImplementation 'com.sun.xml.messaging.saaj:saaj-impl:3.0.1'
-    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
     implementation(files(genJaxb.classesDir).builtBy(genJaxb))
     jaxb 'org.glassfish.jaxb:jaxb-xjc:4.0.1'
     // Kafka
-    testImplementation 'org.apache.kafka:kafka-clients:3.5.0'
+    testImplementation 'org.apache.kafka:kafka-clients:3.5.1'
+    // Wiremock
+    testImplementation 'com.github.tomakehurst:wiremock-jre8:2.35.0'
+    testImplementation 'com.github.tomakehurst:wiremock-standalone:2.27.2'
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
+tasks.register('printVersion') {
+    doLast {
+        println project.version
+    }
 }
 
 test {
