--- a/niffler-auth/src/main/resources/application.yaml
+++ b/niffler-auth/src/main/resources/application.yaml
@@ -43,10 +43,11 @@ logging:
   level:
     root: INFO
     org.springframework.kafka: INFO
-    org.springframework.web: INFO
-    org.springframework.security: INFO
-    org.springframework.security.oauth2: INFO
+    org.springframework.web: DEBUG
+    org.springframework.security: DEBUG
+    org.springframework.security.oauth2: DEBUG
     org.springframework.web.cors: DEBUG
+    guru.qa.niffler.service.LoggingFilter: DEBUG
 #    org.springframework.boot.autoconfigure: DEBUG
 
 ---
