--- a/niffler-e-2-e-tests-rustam-lesson_8/build.gradle
+++ b/niffler-e-2-e-tests-rustam-lesson_8/build.gradle
@@ -14,6 +14,8 @@ plugins {
     id 'java'
     id 'io.qameta.allure' version '2.11.2'
     id 'io.qameta.allure-adapter' version '2.11.2'
+    id 'org.springframework.boot' version '3.1.0'
+    id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group = 'guru.qa'
@@ -98,6 +100,10 @@ dependencies {
     testImplementation 'org.hibernate:hibernate-core:6.3.0.Final'
     testImplementation 'com.github.vertical-blank:sql-formatter:2.0.3'
     testImplementation 'org.springframework.security:spring-security-crypto:6.1.0'
+    // Spring
+    testImplementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'org.postgresql:postgresql'
     // Allure
     testImplementation "io.qameta.allure:allure-attachments:${allureVersion}"
     testImplementation("io.qameta.allure:allure-junit5:${allureVersion}") {
