--- a/niffler-auth/src/main/resources/application.yaml
+++ b/niffler-auth/src/main/resources/application.yaml
@@ -121,8 +121,8 @@ niffler-front:
 niffler-auth:
   base-uri: 'https://auth.niffler.qa.guru'
 oauth2:
-  client-id: ${oauth2.client-id}
-  client-secret: ${oauth2.client-secret}
+  client-id: ${client-id}
+  client-secret: ${client-secret}
 ---
 spring:
   config:
@@ -148,6 +148,6 @@ niffler-front:
 niffler-auth:
   base-uri: 'https://auth.niffler-stage.qa.guru'
 oauth2:
-  client-id: ${oauth2.client-id}
-  client-secret: ${oauth2.client-secret}
+  client-id: ${client-id}
+  client-secret: ${client-secret}
 ---
