--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -33,6 +33,7 @@ services:
   auth.niffler.dc:
     container_name: auth.niffler.dc
     image: ${PREFIX}/niffler-auth-${PROFILE}:${AUTH_VER}
+    pull_policy: always
     environment:
       - VAULT_TOKEN=${VAULT_TOKEN}
     ports:
@@ -53,6 +54,7 @@ services:
   currency.niffler.dc:
     container_name: currency.niffler.dc
     image: ${PREFIX}/niffler-currency-${PROFILE}:${CURRENCY_VER}
+    pull_policy: always
     environment:
       - VAULT_TOKEN=${VAULT_TOKEN}
     ports:
@@ -66,6 +68,7 @@ services:
   gateway.niffler.dc:
     container_name: gateway.niffler.dc
     image: ${PREFIX}/niffler-gateway-${PROFILE}:${GATEWAY_VER}
+    pull_policy: always
     environment:
       - VAULT_TOKEN=${VAULT_TOKEN}
     ports:
@@ -86,6 +89,7 @@ services:
   spend.niffler.dc:
     container_name: spend.niffler.dc
     image: ${PREFIX}/niffler-spend-${PROFILE}:${SPEND_VER}
+    pull_policy: always
     environment:
       - VAULT_TOKEN=${VAULT_TOKEN}
     ports:
@@ -98,6 +102,7 @@ services:
   userdata.niffler.dc:
     container_name: userdata.niffler.dc
     image: ${PREFIX}/niffler-userdata-${PROFILE}:${USERDATA_VER}
+    pull_policy: always
     environment:
       - VAULT_TOKEN=${VAULT_TOKEN}
     ports:
@@ -113,6 +118,7 @@ services:
   frontend.niffler.dc:
     container_name: frontend.niffler.dc
     image: ${PREFIX}/${FRONT_IMAGE}-${PROFILE}:${FRONT_VER}
+    pull_policy: always
     ports:
       - "8000:80"
     restart: always
