--- a/.github/workflows/niffler-currency-staging.yaml
+++ b/.github/workflows/niffler-currency-staging.yaml
@@ -11,7 +11,10 @@ jobs:
     runs-on: stage-runner
     steps:
       - name: Checkout project & set envs
-        uses: .github/workflows/reusable/staging
+        uses: ./.github/workflows/common-action.yml
+        with:
+          runner: stage-runner
+          profile: staging
       - name: build
         working-directory: ./
         run: |
