--- a/.github/workflows/niffler-gateway-prod.yaml
+++ b/.github/workflows/niffler-gateway-prod.yaml
@@ -11,7 +11,10 @@ jobs:
     runs-on: prod-runner
     steps:
       - name: Checkout project & set envs
-        uses: .github/workflows/reusable/prod
+        uses: ./.github/workflows/common-action.yml
+        with:
+          runner: prod-runner
+          profile: prod
       - name: deploy
         working-directory: ./
         run: |
