Flows paths trigger on itself

--- a/.github/workflows/niffler-auth-prod.yaml
+++ b/.github/workflows/niffler-auth-prod.yaml
@@ -4,6 +4,7 @@ on:
     branches:
       - master
     paths:
+      - '.github/workflows/niffler-auth-prod.yaml'
       - 'niffler-auth/**'
 
 jobs:
