--- a/.github/workflows/niffler-spend-staging.yaml
+++ b/.github/workflows/niffler-spend-staging.yaml
@@ -4,6 +4,7 @@ on:
     branches-ignore:
       - master
     paths:
+      - '.github/workflows/niffler-spend-staging.yaml'
       - 'niffler-spend/**'
 
 jobs:
