--- a/niffler-auth/src/main/resources/application.yaml
+++ b/niffler-auth/src/main/resources/application.yaml
@@ -106,10 +106,10 @@ spring:
     vault:
       authentication: TOKEN
       host: vault.qa.guru
-      port: 443
-      scheme: https
-      uri: https://vault.qa.guru:443
+      uri: https://vault.qa.guru
       token: ${VAULT_TOKEN}
+      kv:
+        enabled: true
   kafka:
     bootstrap-servers: ${kafka.url}
   datasource:
@@ -133,10 +133,10 @@ spring:
     vault:
       authentication: TOKEN
       host: vault.qa.guru
-      port: 443
-      scheme: https
-      uri: https://vault.qa.guru:443
+      uri: https://vault.qa.guru
       token: ${VAULT_TOKEN}
+      kv:
+        enabled: true
   kafka:
     bootstrap-servers: ${kafka.url}
   datasource:
