--- a/niffler-gateway/src/main/resources/application.yaml
+++ b/niffler-gateway/src/main/resources/application.yaml
@@ -92,10 +92,10 @@ spring:
     vault:
       authentication: TOKEN
       host: vault.qa.guru
-      port: 443
-      scheme: https
-      uri: https://vault.qa.guru:443
+      uri: https://vault.qa.guru
       token: ${VAULT_TOKEN}
+      kv:
+        enabled: true
   security:
     oauth2:
       resourceserver:
@@ -126,10 +126,10 @@ spring:
     vault:
       authentication: TOKEN
       host: vault.qa.guru
-      port: 443
-      scheme: https
-      uri: https://vault.qa.guru:443
+      uri: https://vault.qa.guru
       token: ${VAULT_TOKEN}
+      kv:
+        enabled: true
   security:
     oauth2:
       resourceserver:
