try run tests before all other workflows

--- a/.github/workflows/niffler-gateway-staging.yaml
+++ b/.github/workflows/niffler-gateway-staging.yaml
@@ -1,7 +1,8 @@
 name: gateway_deploy_stage
+
 on:
   workflow_run:
-    workflows: [ "e2e" ]
+    workflows: [ e2e ]
     types:
       - completed
 
