--- a/.github/workflows/niffler-frontend-gql-staging.yaml
+++ b/.github/workflows/niffler-frontend-gql-staging.yaml
@@ -1,7 +1,8 @@
 name: frontend_gql_deploy_stage
+
 on:
   workflow_run:
-    workflows: [ "e2e" ]
+    workflows: [ e2e ]
     types:
       - completed
 
