--- a/.github/workflows/niffler-frontend-gql-staging.yaml
+++ b/.github/workflows/niffler-frontend-gql-staging.yaml
@@ -26,6 +26,23 @@ jobs:
     runs-on: niffler-stage-runner
     needs: prepare
     steps:
+      #   https://github.com/LouisBrunner/checks-action/issues/22#issuecomment-885047551
+      - name: Recognize sha ref
+      - uses: actions/checkout@master
+        id: sharef
+        run: |
+          if [ "$EVENT" == 'pull_request' ]
+          then
+            echo "::set-output name=sha::$(echo ${{github.event.pull_request.head.sha}})"
+          elif [ "$EVENT" == 'workflow_run' ]
+          then
+            echo "::set-output name=sha::$(echo ${{github.event.workflow_run.head_sha}})"
+          else
+            echo "::set-output name=sha::$(echo $GITHUB_SHA)"
+          fi
+        env:
+          EVENT: ${{ github.event_name }}
+          REF: ${{ github.ref }}
       - name: Push required props to GITHUB_ENV
         run: |
           echo "PROFILE=staging" >> $GITHUB_ENV
@@ -47,3 +64,8 @@ jobs:
           pwd
           echo "### niffler-front version will be used: ${{ env.PREFIX }}/${{ env.FRONT_IMAGE }}-${{ env.PROFILE }}:${{ env.FRONT_VER }}"
           bash ./docker-build.sh staging push
+      - name: Commit Action Status
+        uses: LouisBrunner/checks-action@v1.1.1
+        with:
+          sha: ${{ steps.sharef.outputs.sha }}
+          token: ${{ secrets.GITHUB_TOKEN }}
