--- a/.github/workflows/niffler-frontend-gql-staging.yaml
+++ b/.github/workflows/niffler-frontend-gql-staging.yaml
@@ -9,20 +9,20 @@ on:
 jobs:
   prepare:
     if: |
-      github.event.workflow_run.event == 'workflow_run' && 
+      github.event.workflow_run.event == 'push' && 
       github.event.workflow_run.name == 'e2e' && 
       github.event.workflow_run.conclusion == 'success' && 
-      contains(github.event_path, 'niffler-frontend-gql/')
+      -n "$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep 'niffler-frontend-gql')
     uses: ./.github/workflows/common-action.yml
     with:
       runner: niffler-stage-runner
 
   deploy:
     if: |
-      github.event.workflow_run.event == 'workflow_run' && 
+      github.event.workflow_run.event == 'push' && 
       github.event.workflow_run.name == 'e2e' && 
       github.event.workflow_run.conclusion == 'success' && 
-      contains(github.event_path, 'niffler-frontend-gql/')
+      -n "$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep 'niffler-frontend-gql')
     runs-on: niffler-stage-runner
     needs: prepare
     steps:
@@ -68,3 +68,4 @@ jobs:
         with:
           sha: ${{ steps.sharef.outputs.sha }}
           token: ${{ secrets.GITHUB_TOKEN }}
+          name: frontend_gql_deploy_stage
