--- a/.github/workflows/niffler-userdata-staging.yaml
+++ b/.github/workflows/niffler-userdata-staging.yaml
@@ -7,24 +7,12 @@ on:
       - completed
 
 jobs:
-  debug:
-    runs-on: niffler-stage-runner
-    steps:
-      - name: debug
-        run: |
-          echo "### github.event.workflow_run.event: ${{ github.event.workflow_run.event }}"
-          echo "### github.event.workflow_run.name: ${{ github.event.workflow_run.name }}"
-          echo "### github.event.workflow_run.conclusion: ${{ github.event.workflow_run.conclusion }}"
-          echo "### github.event_path: ${{ github.event_path }}"
-          echo "$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep 'userdata')"
-  
-
   prepare:
     if: |
       github.event.workflow_run.event == 'push' && 
       github.event.workflow_run.name == 'e2e' && 
       github.event.workflow_run.conclusion == 'success' && 
-      -n "$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep 'userdata')
+      -n "$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep 'niffler-userdata')
     uses: ./.github/workflows/common-action.yml
     with:
       runner: niffler-stage-runner
@@ -34,7 +22,7 @@ jobs:
       github.event.workflow_run.event == 'push' && 
       github.event.workflow_run.name == 'e2e' && 
       github.event.workflow_run.conclusion == 'success' && 
-      -n "$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep 'userdata')
+      -n "$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep 'niffler-userdata')
     runs-on: niffler-stage-runner
     needs: prepare
     steps:
@@ -84,3 +72,4 @@ jobs:
         with:
           sha: ${{ steps.sharef.outputs.sha }}
           token: ${{ secrets.GITHUB_TOKEN }}
+          name: userdata_deploy_stage
